force-app/main/default/objects/Task/fields/Additional_Account_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Account_Notes__c</fullName>
    <label>Additional Account Notes</label>
    <type>TextArea</type>
</CustomField>