force-app/main/default/objects/Task/fields/Case_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Review_Date__c</fullName>
    <label>Case Review Date</label>
    <type>Date</type>
</CustomField>