force-app/main/default/objects/Task/fields/Communication_Preference__c.field-meta.xml
<CustomField>
    <fullName>Communication_Preference__c</fullName>
    <label>Communication Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Office phone</fullName><label>Office phone</label><default>false</default></value>
            <value><fullName>Cell</fullName><label>Cell</label><default>false</default></value>
            <value><fullName>Text</fullName><label>Text</label><default>false</default></value>
            <value><fullName>Email</fullName><label>Email</label><default>false</default></value>
            <value><fullName>In Person</fullName><label>In Person</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>