force-app/main/default/objects/Task/fields/Date_Uploaded_to_SFDC__c.field-meta.xml
<CustomField>
    <fullName>Date_Uploaded_to_SFDC__c</fullName>
    <label>Date Uploaded to SFDC</label>
    <type>Date</type>
</CustomField>