force-app/main/default/objects/Task/fields/Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Type__c</fullName>
    <label>Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>14 day</fullName><label>14 day</label><default>false</default></value>
            <value><fullName>30 day</fullName><label>30 day</label><default>false</default></value>
            <value><fullName>60 day</fullName><label>60 day</label><default>false</default></value>
            <value><fullName>90 day</fullName><label>90 day</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>