force-app/main/default/objects/Task/fields/Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name__c</fullName>
    <label>Patient Name</label>
    <type>Text</type>
    <length>80</length>
</CustomField>