force-app/main/default/objects/Task/fields/Software_Version__c.field-meta.xml
<CustomField>
    <fullName>Software_Version__c</fullName>
    <label>Software Version</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Cloud</fullName><label>Cloud</label><default>false</default></value>
            <value><fullName>Desktop</fullName><label>Desktop</label><default>false</default></value>
            <value><fullName>uDesign 9.1</fullName><label>uDesign 9.1</label><default>false</default></value>
            <value><fullName>Earlier version</fullName><label>Earlier version</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>