force-app/main/default/objects/Task/fields/Training_Method__c.field-meta.xml
<CustomField>
    <fullName>Training_Method__c</fullName>
    <label>Training Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>In Person</fullName><label>In Person</label><default>false</default></value>
            <value><fullName>Online</fullName><label>Online</label><default>false</default></value>
            <value><fullName>Combo</fullName><label>Combo</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>