force-app/main/default/objects/Task/recordTypes/Advanced_Case_Review.recordType-meta.xml
<RecordType>
    <fullName>Advanced_Case_Review</fullName>
    <active>false</active>
    <description>Completed by RSM, by request of Customer or RSM</description>
    <label>Advanced Case Review</label>
</RecordType>