force-app/main/default/objects/Task/recordTypes/Aligner_Workflow_Plan.recordType-meta.xml
<RecordType>
    <fullName>Aligner_Workflow_Plan</fullName>
    <active>true</active>
    <description>MANDATORY for all accounts prior to DocuSign Agreement.</description>
    <label>Aligner Workflow Plan</label>
</RecordType>