force-app/main/default/objects/Task/recordTypes/Check_In.recordType-meta.xml
<RecordType>
    <fullName>Check_In</fullName>
    <active>true</active>
    <description>Completed by Clinical Team or RSM to capture check in calls</description>
    <label>Check in</label>
</RecordType>