force-app/main/default/objects/Task/recordTypes/Compass_Tool_Activity.recordType-meta.xml
<RecordType>
    <fullName>Compass_Tool_Activity</fullName>
    <active>false</active>
    <label>Compass Tool Activity</label>
</RecordType>