force-app/main/default/objects/Task/recordTypes/Customer_Billing_Follow_Up.recordType-meta.xml
<RecordType>
    <fullName>Customer_Billing_Follow_Up</fullName>
    <active>true</active>
    <description>Assigned to RSMs to follow up with Customers after many failed CS attempts.</description>
    <label>Customer Billing Follow Up</label>
</RecordType>