force-app/main/default/objects/Task/recordTypes/Existing_Account_Training.recordType-meta.xml
<RecordType>
    <fullName>Existing_Account_Training</fullName>
    <active>true</active>
    <description>Completed by IS to capture training with an existing customer</description>
    <label>Existing Account Training</label>
</RecordType>