force-app/main/default/objects/Task/recordTypes/Interaction.recordType-meta.xml
<RecordType>
    <fullName>Interaction</fullName>
    <active>true</active>
    <description>Used to capture notes from calls/emails with Orthos and Staff.</description>
    <label>Interaction</label>
</RecordType>