force-app/main/default/objects/Task/recordTypes/New_Account_Training.recordType-meta.xml
<RecordType>
    <fullName>New_Account_Training</fullName>
    <active>true</active>
    <description>Completed by IS to capture initial training</description>
    <label>New Account Training</label>
</RecordType>