force-app/main/default/objects/Task/recordTypes/New_Feature_Review.recordType-meta.xml
<RecordType>
    <fullName>New_Feature_Review</fullName>
    <active>true</active>
    <description>Used to capture interactions with customers when reviewing uDesign features.</description>
    <label>New Feature Review</label>
</RecordType>