force-app/main/default/objects/Task/recordTypes/Order_Cancellation_Notification.recordType-meta.xml
<RecordType>
    <fullName>Order_Cancellation_Notification</fullName>
    <active>true</active>
    <description>Used by CRB to notify</description>
    <label>Order Cancellation Notification</label>
</RecordType>