force-app/main/default/objects/Task/recordTypes/Request_Training.recordType-meta.xml
<RecordType>
    <fullName>Request_Training</fullName>
    <active>true</active>
    <description>Completed by RSM to request training</description>
    <label>Request Training</label>
</RecordType>