force-app/main/default/objects/Task/recordTypes/Step_1_Demo.recordType-meta.xml
<RecordType>
    <fullName>Step_1_Demo</fullName>
    <active>true</active>
    <description>Initial RSM presentation to customers with video</description>
    <label>Demo</label>
</RecordType>