force-app/main/default/objects/Task/recordTypes/Step_2_RSM_Account_Setup.recordType-meta.xml
<RecordType>
    <fullName>Step_2_RSM_Account_Setup</fullName>
    <active>true</active>
    <description>Post Demo, this task captures account settings and integrations</description>
    <label>RSM Account Setup</label>
</RecordType>