force-app/main/default/objects/Task/recordTypes/Step_4_Basic_Training.recordType-meta.xml
<RecordType>
    <fullName>Step_4_Basic_Training</fullName>
    <active>true</active>
    <description>Completed by Clinical Team</description>
    <label>Initial Training</label>
</RecordType>