force-app/main/default/objects/Task/recordTypes/Step_5_Case_Review.recordType-meta.xml
<RecordType>
    <fullName>Step_5_Case_Review</fullName>
    <active>true</active>
    <description>Completed by IS to capture Case Reviews</description>
    <label>Case Review</label>
</RecordType>