force-app/main/default/objects/Task/recordTypes/Step_6_Advanced_Training.recordType-meta.xml
<RecordType>
    <fullName>Step_6_Advanced_Training</fullName>
    <active>false</active>
    <description>Completed by Clinical Team once customer has completed Case Review</description>
    <label>Advanced Training</label>
</RecordType>