force-app/main/default/objects/Task/recordTypes/Team_Education_Meeting.recordType-meta.xml
<RecordType>
    <fullName>Team_Education_Meeting</fullName>
    <active>true</active>
    <description>Used to track in-person and online training events.</description>
    <label>Team Education Meeting</label>
</RecordType>