force-app/main/default/objects/Task/recordTypes/VIP_Case_Review.recordType-meta.xml
<RecordType>
    <fullName>VIP_Case_Review</fullName>
    <active>true</active>
    <description>Completed by CSL to capture VIP Case Reviews</description>
    <label>VIP Case Review</label>
</RecordType>