force-app/main/default/objects/Task/recordTypes/VIP_Preference.recordType-meta.xml
<RecordType>
    <fullName>VIP_Preference</fullName>
    <active>true</active>
    <description>Completed by CSL to capture VIP preferences</description>
    <label>VIP Preference</label>
</RecordType>