force-app/main/default/objects/Task/recordTypes/VIP_Training_Onboarding.recordType-meta.xml
<RecordType>
    <fullName>VIP_Training_Onboarding</fullName>
    <active>true</active>
    <description>Completed by CSL to capture training/onboarding</description>
    <label>VIP Training/Onboarding</label>
</RecordType>