force-app/main/default/objects/Task/listViews/Client_Services_Task.listView-meta.xml
<ListView>
    <fullName>Client_Services_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>Client Services</label>
    <queue>Client_Services</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>